--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Test</title>
+    <title>Test from Crap 1</title>
   </head>
   <body>Under construction.</body>
 </html>
