Added a comment to the head

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <!-- Adding a comment in crap1 -->
     <title>Test from Crap 1</title>
   </head>
   <body>Under construction.</body>
